@@ -54,6 +54,7 @@
     * 3898 FIX: Unmonitored services: Fixed possible bug in case discovery service produces unexpected output
     * 3902 FIX: Graph search view: Changing painter options made page empty
     * 3969 FIX: CentOS 5.5: Fixed incompatibility with the available OpenSSL 0.98...
+    * 4037 FIX: Fix graphs that have optional metrics...
 
     WATO:
     * 3915 User access times: New icon when never logged in; New column "last seen"
